# kira-mcp

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
app/api/mcp/: route.ts
src/kira_mcp/: __init__.py  __main__.py  _mcp.py
src/kira_mcp/lib/: cache.py  keys.py  ocr.py
src/kira_mcp/tools/: __init__.py  clipboard.py  contour.py  keyboard.py  mouse.py  omniparser.py  parse.py  screen.py
