[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kira-mcp"
version = "0.4.0"
description = "Local MCP server for AI agents: OmniParser-v2 UI-element detection (via Hugging Face Spaces) plus full keyboard / mouse / screen / clipboard control via pyautogui + mss."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anmol Sharma", email = "anmol20102005@gmail.com" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "agent",
  "computer-use",
  "omniparser",
  "pyautogui",
  "automation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Utilities",
]

dependencies = [
  "mcp>=1.2.0",
  "pyautogui>=0.9.54",
  "mss>=9.0.1",
  "pyperclip>=1.8.2",
  "pillow>=10.0",
  "pydantic>=2.0",
  "gradio-client>=1.0",
]

[project.urls]
Homepage = "https://github.com/Anmol202005/kira-mcp"
Repository = "https://github.com/Anmol202005/kira-mcp"
Issues = "https://github.com/Anmol202005/kira-mcp/issues"

[project.scripts]
kira-mcp = "kira_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kira_mcp"]
