[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kira-mcp"
version = "0.5.0"
description = "Local MCP server for AI agents: local YOLO-based UI-element detection (OmniParser-v2 icon detector) with per-element OCR, hash caching, and full keyboard / mouse / screen / clipboard control via pyautogui + mss."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anmol Sharma", email = "anmol20102005@gmail.com" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "agent",
  "computer-use",
  "omniparser",
  "pyautogui",
  "automation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Utilities",
]

dependencies = [
  "mcp>=1.2.0",
  "pyautogui>=0.9.54",
  "mss>=9.0.1",
  "pyperclip>=1.8.2",
  "pillow>=10.0",
  "pydantic>=2.0",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "torch>=2.0",
  "torchvision>=0.15",
  "ultralytics>=8.1",
  "supervision>=0.18",
  # Hash cache backend. xxhash is faster than stdlib hashlib for our small
  # crop fingerprints; the code falls back to blake2b if it's missing, so
  # nothing actually breaks without it — this just makes the fast path real.
  "xxhash>=3.0",
]

[project.optional-dependencies]
# OCR backends. perceive_screen still works without these (each element's
# `text` field is just empty); installing one unlocks JSON-first agent
# workflows where `find_element(text=...)` replaces visual id-matching.
# rapidocr-onnxruntime is the recommended default: pure ONNX, lightweight,
# ~30-80ms per call on CPU. easyocr is heavier but supports GPU.
ocr = ["rapidocr-onnxruntime>=1.3"]
ocr-gpu = ["easyocr>=1.7"]

[project.urls]
Homepage = "https://github.com/Anmol202005/kira-mcp"
Repository = "https://github.com/Anmol202005/kira-mcp"
Issues = "https://github.com/Anmol202005/kira-mcp/issues"

[project.scripts]
kira-mcp = "kira_mcp.__main__:main"

[tool.hatch.build]
# Ship the OmniParser-v2 icon-detector weights inside the package so the user
# does not need a separate `hf download` step. The `.cache/` carve-out keeps
# huggingface_hub's per-download metadata out of the wheel if anyone re-runs
# the manual download into `src/kira_mcp/weights/`.
exclude = [
  "src/kira_mcp/weights/.cache",
  "src/kira_mcp/weights/**/.cache",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kira_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/kira_mcp/weights/icon_detect/model.pt" = "kira_mcp/weights/icon_detect/model.pt"
"src/kira_mcp/weights/icon_detect/model.yaml" = "kira_mcp/weights/icon_detect/model.yaml"
